<resources>
    <string name="app_name">Application2.0</string>
    <string name="moving_button">motion</string>
    <string name="servo_button">servo</string>
    <string name="sensors_button">sensors</string>
    <string name="settings_button">settings</string>
    <string name="exit_button">exit</string>
    <string name="connection_text">Connection state</string>
    <string name="have_no_bluetooth_module">Connection state</string>
    <string name="connected_to_device">Connection state</string>
    <string-array name="languages">
        <item>Русский</item>
        <item>English</item>
    </string-array>
    <string-array name="api">
        <item>API 1.0</item>
        <item>API 2.0</item>
        <item>API 3.0</item>
        <item>API 4.0</item>
    </string-array>
</resources>
