<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kimentii.application20.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <Button
            android:id="@+id/motion_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/moving_button" />

        <Button
            android:id="@+id/servo_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/servo_button" />

        <Button
            android:id="@+id/sensors_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensors_button" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_button" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit_button" />
    </LinearLayout>
</RelativeLayout>
